--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,8 @@ button:active {
   margin-top: 20px;
   margin-bottom: 20px;
   display: flex;
+  flex-direction: column;
+  gap: 20px;
   align-items: center;
   justify-content: space-evenly;
 }
