--- a/src/App.css
+++ b/src/App.css
@@ -312,7 +312,7 @@ button:active {
 
 .profile-buttons {
   display: flex;
-  flex-direction: column;
+  align-self: flex-start;
   gap: 8px;
   margin-left: auto;
 }
@@ -336,7 +336,7 @@ button:active {
   margin: 15px 0;
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
+  max-width: auto;
 }
 
 .settings-panel input {
@@ -351,6 +351,11 @@ button:active {
   background: #fff;
   border-radius: 10px;
   padding: 15px;
-  margin: 20px 0;
+  margin: auto;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.btn-purple {
+  display: flex;
+  align-items: flex-start;
 }
